# ayase

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  METRICS.md  MODELS.md  README.md  ayase.toml.example  ayase_metrics_plan.md  pyproject.toml  requirements-lock.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: basic_usage.py
models/: README.md
plugins/: example_plugin.py
scripts/: gen_metrics_md.py
src/ayase/: __init__.py  __main__.py  audio.py  base_modules.py  cli.py  compat.py  config.py  metrics_doc.py  models.py  models_doc.py  pipeline.py  profile.py  scanner.py  tui.py  video.py
src/ayase/modules/: __init__.py  action_recognition.py  adadqa.py  advanced_flow.py  aesthetic.py  aesthetic_scoring.py  afine.py  ahiq.py  aigcvqa.py  aigv_assessor.py  aigvqa.py  arniqa.py  artfid.py  audio.py  audio_estoi.py  audio_lpdist.py  audio_mcd.py  audio_pesq.py  audio_si_sdr.py  audio_text_alignment.py  audio_utmos.py  audio_visual_sync.py  audiobox_aesthetics.py  avqt.py  background_consistency.py  background_diversity.py  basic.py  bd_rate.py  beat_alignment.py  bias_detection.py  brightrate.py  brisque.py  butteraugli.py  bvqi.py  c3dvqa.py  cambi.py  camera_jitter.py  camera_motion.py  captioning.py  cdc.py  (+273 more)
src/ayase/utils/: sampling.py
tests/: conftest.py  test_audio_metrics.py  test_docs_integrity.py  test_golden_values.py  test_integration_synthetic.py  test_module_smoke.py  test_profiles.py  test_readme_contract.py  test_regressions.py  test_tui.py
tests/modules/: conftest.py  test_curation_metrics.py  test_dataset_modules.py  test_depth_and_multiview.py  test_face_modules.py  test_fields_general.py  test_identity_loss.py  test_image_iqa_metrics.py  test_industry_metrics.py  test_iqa_research_metrics.py  test_metrics_table.py  test_ml_basics.py  test_motion_scene_semantic_metrics.py  test_nemo_curator.py  test_new_fr_aigc.py  test_new_llm_360_face_pc.py  test_new_nr_vqa_1.py  test_new_nr_vqa_2.py  test_opencv_modules.py  test_perceptual_metrics.py  test_quality_metrics_all.py  test_reference_and_meta_metrics.py  test_safety_modules.py  test_tifa.py  test_tonal_dynamic_range.py  test_umap_projection.py  test_vbench2_compbench.py  test_video_native_fields.py  test_video_native_metrics.py  test_vlm_presets.py
tests/modules/per_module/: conftest.py  test_4k_vqa.py  test_action_recognition.py  test_adadqa.py  test_advanced_flow.py  test_aesthetic.py  test_aesthetic_scoring.py  test_afine.py  test_ahiq.py  test_aigcvqa.py  test_aigv_assessor.py  test_aigvqa.py  test_arniqa.py  test_artfid.py  test_audio.py  test_audio_estoi.py  test_audio_lpdist.py  test_audio_mcd.py  test_audio_pesq.py  test_audio_si_sdr.py  test_audio_text_alignment.py  test_audio_utmos.py  test_audio_visual_sync.py  test_audiobox_aesthetics.py  test_av_sync.py  test_avqt.py  test_background_consistency.py  test_background_diversity.py  test_basic.py  test_basic_quality.py  test_bd_rate.py  test_beat_alignment.py  test_bias_detection.py  test_brightrate.py  test_brisque.py  test_butteraugli.py  test_bvqi.py  test_c3dvqa.py  test_cambi.py  test_camera_jitter.py  (+288 more)
